Added store function in Travel controller (and the specific API route). Updated swagger documentation.
